crates/zizmor/tests/integration/snapshots/integration__cli__stdin_workflow.snap
---
source: crates/zizmor/tests/integration/cli.rs
expression: "zizmor().stdin(workflow).no_config(true).args([\"-\"]).run()?"
---
warning[artipacked]: credential persistence through GitHub Actions artifacts
 --> <stdin>:6:9
  |
6 |       - uses: actions/checkout@v3
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^ does not set persist-credentials: false
  |
  = note: audit confidence → Low
  = note: this finding has an auto-fix

warning[excessive-permissions]: overly broad permissions
 --> <stdin>:3:3
  |
3 | /   test:
4 | |     runs-on: ubuntu-latest
5 | |     steps:
6 | |       - uses: actions/checkout@v3
  | |                                  ^
  | |                                  |
  | |__________________________________this job
  |                                    default permissions used due to no permissions: block
  |
  = note: audit confidence → Medium

error[unpinned-uses]: unpinned action reference
 --> <stdin>:6:15
  |
6 |       - uses: actions/checkout@v3
  |               ^^^^^^^^^^^^^^^^^^^ action is not pinned to a hash (required by blanket policy)
  |
  = note: audit confidence → High

7 findings (4 suppressed, 1 fixable): 0 informational, 0 low, 2 medium, 1 high
